Mirror modifier flips curve normals #34616

Closed
opened 2013-03-12 20:57:20 +01:00 by Anna Celarek · 4 comments

%%%--- Operating System, Graphics card ---
Win 7 64bit, Nvidia GTX 650Ti

- Blender version with error, and version that worked ---

error in r55211 and official 2.66a (r55075:55077)

- Short description of error ---

The mirror modifier on a bevelled curve (bevel depth > 0) object flips the normals on both sides.
Also extruded curves and curves with a bevel object are flipped.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See the attached .blend.
There is one curve with a bevel object, and the other with Extrude and Bevel Depth. Switch the mirror modifier on and off to see the problem. %%%

%%%--- Operating System, Graphics card --- Win 7 64bit, Nvidia GTX 650Ti - Blender version with error, and version that worked --- error in r55211 and official 2.66a (r55075:55077) - Short description of error --- The mirror modifier on a bevelled curve (bevel depth > 0) object flips the normals on both sides. Also extruded curves and curves with a bevel object are flipped. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See the attached .blend. There is one curve with a bevel object, and the other with Extrude and Bevel Depth. Switch the mirror modifier on and off to see the problem. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%We made mesh modifiers to correct normals for mirroring. Curves could do this as well. Maybe sergey has energy for this :)%%%

%%%We made mesh modifiers to correct normals for mirroring. Curves could do this as well. Maybe sergey has energy for this :)%%%

%%%Was a backface culling visualization error. Fixed in svn rev55273.

Thanks for the report, closing.%%%

%%%Was a backface culling visualization error. Fixed in svn rev55273. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34616
No description provided.