Fix #34616: Wrong face culling for curves with constructive modifiers

If curve object does have derived mesh, culling shall happen for
back faces, not front.